added adaptive for 3 pages

--- a/app/pages/doctor-profile.html
+++ b/app/pages/doctor-profile.html
@@ -121,7 +121,7 @@
 	</header>
 
 	<main class="main">
-		<section class="breadcrumbs-block">
+		<section class="breadcrumbs-block doctor-block_breadcrumbs">
 			<div class="container">
 				<ul class="breadcrumbs-list">
 					<li class="breadcrumbs-item">
@@ -139,6 +139,9 @@
 
 		<section class="doctor-block">
 			<div class="container">
+				<div class="doctor-block__img-container img-container visible-xs">
+					<img src="../images/all-docs-1@3x.png" alt="img" class="doctor-block__img img-responsive">
+				</div>
 				<h1 class="doctor-block__title">
 					Бельды Николай Олегович
 				</h1>
@@ -146,7 +149,7 @@
 					Врач стоматолог-ортопед
 				</div>
 				<div class="row">
-					<div class="col-sm-6">
+					<div class="col-sm-8 col-md-6">
 						<ul class="doctor-block__ability-list">
 							<li class="doctor-block__ability-item">
 								<div class="doctor-ability-item__title">Образование:</div>
@@ -182,7 +185,7 @@
 								<a href=".enroll-pop-up" class="btn_default doctor-block__link" data-toggle="modal">Записаться на прием</a>
 							</div>
 						</div>
-						<div class="doctor-block__img-container img-container">
+						<div class="doctor-block__img-container img-container hidden-xs">
 							<img src="../images/all-docs-1@3x.png" alt="img" class="doctor-block__img img-responsive">
 						</div>
 					</div>
