--- a/app/pages/history.html
+++ b/app/pages/history.html
@@ -226,7 +226,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-3.png" alt="img" class="history-block__article-img img-responsive">
@@ -235,6 +235,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-4.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-3.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-4.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -254,7 +269,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-5.png" alt="img" class="history-block__article-img img-responsive">
@@ -263,6 +278,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-6.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-5.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-6.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -282,7 +312,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-7.png" alt="img" class="history-block__article-img img-responsive">
@@ -291,6 +321,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-8.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-7.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-8.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -310,7 +355,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-9.png" alt="img" class="history-block__article-img img-responsive">
@@ -319,6 +364,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-10.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-9.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-10.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -338,7 +398,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-11.png" alt="img" class="history-block__article-img img-responsive">
@@ -347,6 +407,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-12.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-11.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-12.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -366,7 +441,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-13.png" alt="img" class="history-block__article-img img-responsive">
@@ -375,6 +450,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-14.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-13.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-14.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -394,7 +484,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-15.png" alt="img" class="history-block__article-img img-responsive">
@@ -403,6 +493,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-16.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-15.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-16.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -462,7 +567,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-19.png" alt="img" class="history-block__article-img img-responsive">
@@ -471,6 +576,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-20.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-19.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-20.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -490,7 +610,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-21.png" alt="img" class="history-block__article-img img-responsive">
@@ -499,6 +619,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-22.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-21.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-22.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -558,7 +693,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-25.png" alt="img" class="history-block__article-img img-responsive">
@@ -567,6 +702,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-26.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-25.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-26.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -586,7 +736,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-27.png" alt="img" class="history-block__article-img img-responsive">
@@ -595,6 +745,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-28.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-27.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-28.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
@@ -614,7 +779,7 @@
 					</p>
 				</div>
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-29.png" alt="img" class="history-block__article-img img-responsive">
@@ -623,6 +788,21 @@
 						<div class="col-sm-6">
 							<div class="history-block__article-img-container img-container">
 								<img src="../images/teeth-30.png" alt="img" class="history-block__article-img img-responsive">
+							</div>
+						</div>
+					</div>
+
+					<div class="owl-article-slider_wrapper visible-xs">
+						<div class="owl-carousel owl-article-slider">
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-29.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
+							</div>
+							<div>
+								<div class="owl-article-slider__img-container img-container">
+									<img src="../images/teeth-30.png" alt="img" class="img-responsive owl-article-slider__img">
+								</div>
 							</div>
 						</div>
 					</div>
