--- a/app/pages/contacts.html
+++ b/app/pages/contacts.html
@@ -207,7 +207,7 @@
 		<section class="contacts-feed-block">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-8 col-sm-offset-2">
+					<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 						<div class="contacts-feed-block__title">Напишите нам</div>
 						<form action="#" class="feedback-pop__form">
 							<div class="row">
