--- a/app/pages/article.html
+++ b/app/pages/article.html
@@ -149,7 +149,7 @@
 
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-10 col-sm-offset-1">
+						<div class="col-sm-10 col-sm-offset-1 article-general-block">
 							<h1 class="article-page__title">
 								САПФИРОВЫЕ БРЕКЕТЫ – КРАСИВО, 
 								НАДЕЖНО, ЭФФЕКТИВНО
@@ -230,12 +230,12 @@
 									</li>
 								</ul>
 								<div class="row">
-									<div class="col-sm-6">
+									<div class="col-xs-6">
 										<div class="article-page__img-container img-container">
 											<img src="../images/article_img-1.png" alt="img" class="article-page__img img-responsive">
 										</div>
 									</div>
-									<div class="col-sm-6">
+									<div class="col-xs-6">
 										<div class="article-page__img-container img-container">
 											<img src="../images/article_img-1.png" alt="img" class="article-page__img img-responsive">
 										</div>
@@ -253,7 +253,7 @@
 			<div class="article-page-section article-page-section_form">
 				<div class="container">
 					<div class="row">
-						<div class="col-sm-8 col-sm-offset-2">
+						<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 							<div class="contacts-feed-block__title">
 								<p>Мечтаете о ровных зубах?</p>
 								<p>Записывайтесь на бесплатную консультацию!</p>
@@ -355,7 +355,7 @@
 						Интересные материалы
 					</div>
 					<ul class="article-page__interesting-list row">
-						<li class="article-page__interesting-item col-sm-3">
+						<li class="article-page__interesting-item col-sm-6 col-md-3">
 							<a href="#" class="article-page__interestion-link">
 								<div class="article-page__interestin-img-container img-container">
 									<img src="../images/article_img-3.png" alt="img" class="article-page__interesting-img img-responsive">
@@ -365,7 +365,7 @@
 								</div>
 							</a>
 						</li>
-						<li class="article-page__interesting-item col-sm-3">
+						<li class="article-page__interesting-item col-sm-6 col-md-3">
 							<a href="#" class="article-page__interestion-link">
 								<div class="article-page__interestin-img-container img-container">
 									<img src="../images/article_img-4.png" alt="img" class="article-page__interesting-img img-responsive">
@@ -375,7 +375,7 @@
 								</div>
 							</a>
 						</li>
-						<li class="article-page__interesting-item col-sm-3">
+						<li class="article-page__interesting-item col-sm-6 col-md-3">
 							<a href="#" class="article-page__interestion-link">
 								<div class="article-page__interestin-img-container img-container">
 									<img src="../images/article_img-5.png" alt="img" class="article-page__interesting-img img-responsive">
@@ -385,7 +385,7 @@
 								</div>
 							</a>
 						</li>
-						<li class="article-page__interesting-item col-sm-3">
+						<li class="article-page__interesting-item col-sm-6 col-md-3">
 							<a href="#" class="article-page__interestion-link">
 								<div class="article-page__interestin-img-container img-container">
 									<img src="../images/article_img-10.png" alt="img" class="article-page__interesting-img img-responsive">
